<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Spinner
            android:layout_width="306dp"
            android:layout_height="26dp"
            android:id="@+id/PattySpinner"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/PattyLabel" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <ImageView
            android:layout_width="216dp"
            android:layout_height="192dp" app:srcCompat="@drawable/krabbypatty"
            android:id="@+id/krabbypatty"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/BunLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BunLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/krabbypatty" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Spinner
            android:layout_width="306dp"
            android:layout_height="26dp"
            android:id="@+id/BunSpinner" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/BunLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/PattyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PattyLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/BunSpinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/ToppingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ToppingsLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/PattySpinner"/>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sauteed_mushrooms" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ToppingsLabel" app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sauteed_mushrooms" android:layout_marginStart="8dp"
            android:onClick = "radioButtonSelected"
            android:tag = "sauteed mushrooms"/>
    <RadioButton
            android:text="@string/lettuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lettuce" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ToppingsLabel"
            app:layout_constraintHorizontal_bias="0.57" app:layout_constraintStart_toEndOf="@+id/sauteed_mushrooms"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/tomato"
            android:layout_marginEnd="8dp"
            android:onClick = "radioButtonSelected"
            android:tag = "lettuce"/>
    <RadioButton
            android:text="@string/tomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tomato" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ToppingsLabel"
            android:onClick = "radioButtonSelected"
            android:tag = "tomato"/>
    <RadioButton
            android:text="@string/pickles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickles" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/sauteed_mushrooms" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:onClick = "radioButtonSelected"
            android:tag = "pickles"/>
    <RadioButton
            android:text="@string/mayo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mayo"
            app:layout_constraintEnd_toStartOf="@+id/mustard"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/pickles"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/lettuce"
            android:onClick = "radioButtonSelected"
            android:tag = "mayo"/>
    <RadioButton
            android:text="@string/mustard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mustard" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tomato" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:onClick = "radioButtonSelected"
            android:tag = "mustard"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mayo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout" app:layout_constraintHorizontal_bias="0.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="450dp"
                android:layout_height="wrap_content"
                android:hint="@string/numBurgers" android:id="@+id/numBurgers"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/CostLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CostLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/CaloriesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CaloriesLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/CostLabel" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Cost" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/CostLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Calories"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Cost" app:layout_constraintStart_toEndOf="@+id/CaloriesLabel"
            android:layout_marginStart="2dp"/>
    <Button
            android:text="@string/ENTER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ENTER"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/mustard" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>